--- a/client/src/components/blog-page/blog-page/BlogPage.css
+++ b/client/src/components/blog-page/blog-page/BlogPage.css
@@ -169,7 +169,19 @@ justify-content: center;
     gap:1.5rem;
     align-items: center;
 }
-.blog-newsletter-heading h1{
+.blog-newsletter-form-thankyou{
+    display: flex;
+    padding: 48px 32px;
+    border-radius: 16px;
+    border: 1px solid #d4cfcf;
+}
+.blog-newsletter-form-thankyou h3{
+    font-size: 24px;
+    font-family: 'Inter',sans-serif;
+    color: #1c1623;
+    font-weight: 500;
+}
+.blog-newsletter-heading h3{
     font-size: 24px;
     font-family: 'Inter',sans-serif;
     color: #1c1623;
@@ -268,7 +280,7 @@ justify-content: center;
     .blog-newsletter-form input{
         height: 30px;
     }
-    .blog-newsletter-heading h1{
+    .blog-newsletter-heading h3{
         font-size: 18px;
         text-align: center;
     }
