--- a/client/src/components/blog-page/blog-landing/BlogLanding.css
+++ b/client/src/components/blog-page/blog-landing/BlogLanding.css
@@ -5,7 +5,7 @@
     justify-content: center;
 }
 .blog-landing-container{
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
 }
@@ -31,6 +31,13 @@
 }
 .blog-landing-card-image img{
     width: 70%;
+}
+.blog-landing-card-content{
+   /* padding: 16px;
+   padding-top: 0px; */
+   display: flex;
+   flex-direction: column;
+   gap:1rem;
 }
 .blog-landing-card-category{
     display: flex;
