--- a/client/src/components/common/auth/login/Login.css
+++ b/client/src/components/common/auth/login/Login.css
@@ -3,27 +3,27 @@
     width: 100%;
     padding-top: 120px;
     padding-bottom: 60px;
-    background-color: var(--h-text-w-clr);
+    /* background-color:  #fff4ec; */
+    background-color: #FEF9F5;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .login-container{
-    width:350px;
-    padding: 24px;
-    border: 0;
-    box-shadow: 0px 0px 5px 0px rgba(161,161,161,1);
-    border-radius: 16px;
+    width:420px;
+    padding: 32px 24px;
+    border: 1px solid #c1bfbf;
+    border-radius: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap:2.5rem;
-    margin: 32px;
+    background-color: var(--h-text-w-clr);
 }
 .login-heading h1{ 
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
+    font-family: var(--h-font);
+    font-weight: 600;
     font-size: 28px;
     
 }
@@ -47,7 +47,7 @@
    font-size: 16px;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
-   border: 1px solid grey;
+   border: 1px solid #c1bfbf;
    border-radius: 8px;
    background-color: var(--h-text-w-clr);
 }
@@ -141,7 +141,7 @@
   
   @media only screen and (max-width:500px){
     .login-container{
-        width: 95%;
+        width: 90%;
         gap:1.5rem;
     }
     .form{
