--- a/client/src/components/common/auth/signup/Signup.css
+++ b/client/src/components/common/auth/signup/Signup.css
@@ -2,32 +2,31 @@
     width: 100%;
     padding-top: 120px;
     padding-bottom: 60px;
-    background-color: var(--h-text-w-clr);
+    /* background-color: #fff4ec; */
+    background-color: #FEF9F5;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .signup-container{
-    padding: 24px;
-    /* border: 1px solid; */
-    border: 0;
-    box-shadow: 0px 0px 5px 0px rgba(161,161,161,1);
+    padding: 32px 24px;
+    border: 1px solid #c1bfbf;
     border-radius: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap:2.5rem;
-    margin: 32px;
+    background-color: var(--h-text-w-clr);
 }
 .signup-heading h1{ 
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
+    font-family: var(--h-font);
+    font-weight: 600;
     font-size: 28px;
     
 }
 .form{
-    width: 95%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,7 +45,7 @@
    font-size: 16px;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
-   border: 1px solid grey;
+   border: 1px solid #c1bfbf;
    border-radius: 8px;
    background-color: var(--h-text-w-clr);
 }
@@ -67,20 +66,7 @@
   position: relative;
 }
 
-/* .google-signin-btn {
-    background-color: #DB4437; 
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
 
-.google-signin-btn:hover {
-    background-color: #C13505;
-} */
 
 .google-signin {
     width: 100%;
@@ -90,7 +76,7 @@
     transition: background-color .3s, box-shadow .3s;
       
     padding: 8px 16px;
-    border: 1px solid #8b8b8b;
+    border: 1px solid var(--h-text-b-clr);
     border-radius: 8px;
     /* box-shadow: 0 -1px 1px rgba(0, 0, 0, .25), 0 1px 1px rgba(0, 0, 0, .25); */
     width: 100%;
@@ -180,7 +166,7 @@
   
   @media only screen and (max-width:500px){
     .signup-container{
-        width: 95%;
+        width: 90%;
         gap:1.5rem;
     }
     .form{
@@ -232,11 +218,3 @@
     flex-direction: column;
     width: 100%;
   }
-
-  /* .passerr
-  {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-
-  } */
