--- a/client/src/components/common/header/Header.css
+++ b/client/src/components/common/header/Header.css
@@ -285,6 +285,7 @@
     display: flex;
     flex-direction: column;
     gap:1rem;
+    justify-content: flex-end;
   }
   .header-contents-first,.header-contents-second{
     width:100%;
